--- a/static/global.css
+++ b/static/global.css
@@ -2,17 +2,48 @@
 * {
     font-family: 'Overpass';
     font-weight: 400;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* box-shadow: 0px 0px 5px black inset; */
 }
 
 .appContainer {
-    width: 100%;
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    grid-template-rows: 10vh auto 5vh;
 }
 
-footer {
-    position: absolute;
-    bottom: 0;
-    text-align: center;
+.navBar {
+    display: flex;
+    gap: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0 25px -10px #3e18e9;
+}
+
+a {
+    text-decoration: none;
+    color: black;
     align-self: center;
-    width: 90%;
+    transition: all 0.1s ease-in-out;
+}
+
+.navBar>*:hover {
+    color: #191919;
+    transform: scale(1.1);
+}
+
+.foot {
+    display: flex;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title {
+    text-align: center;
 }
