--- a/src/global.css
+++ b/src/global.css
@@ -10,30 +10,8 @@
 
 .appContainer {
     height: 100vh;
-    width: 100vw;
     display: grid;
     grid-template-rows: 10vh auto 5vh;
-}
-
-.navBar {
-    display: flex;
-    gap: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px 0 25px -10px #3e18e9;
-}
-
-a {
-    text-decoration: none;
-    color: black;
-    align-self: center;
-    transition: all 0.1s ease-in-out;
-}
-
-.navBar>*:hover {
-    color: #191919;
-    transform: scale(1.1);
 }
 
 .foot {
@@ -42,8 +20,10 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .title {
     text-align: center;
+    font-weight: 700;
 }
