--- a/src/global.css
+++ b/src/global.css
@@ -1,17 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass:wght@200..700&display=swap');
 * {
-    font-family: 'Overpass';
+    font-family: 'Overpass', sans-serif;
     font-weight: 400;
     margin: 0;
-    padding: 0;
+    /* padding: 0; */
     box-sizing: border-box;
     /* box-shadow: 0px 0px 5px black inset; */
 }
 
+*::-webkit-scrollbar {
+    width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+    background-color: #e4e4e4;
+    border-radius: 2px;
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 2px;
+    background-image: linear-gradient(180deg, #d0368a 0%, #708ad4 60%);
+    box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
+}
+
 .appContainer {
     height: 100vh;
+    width: 100vw;
     display: grid;
-    grid-template-rows: 10vh auto 5vh;
+    grid-template-rows: 10vh auto;
 }
 
 .foot {
