--- a/src/global.css
+++ b/src/global.css
@@ -43,3 +43,10 @@
     text-align: center;
     font-weight: 700;
 }
+
+.search_container {
+    margin: 40px 0;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
