--- a/src/global.css
+++ b/src/global.css
@@ -6,6 +6,8 @@
     /* padding: 0; */
     box-sizing: border-box;
     /* box-shadow: 0px 0px 5px black inset; */
+    --nav-bar-height: 100px;
+    --footer-height: 2rem;
 }
 
 *::-webkit-scrollbar {
@@ -23,6 +25,11 @@
     box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
 }
 
+
+a {
+    color: black;
+}
+
 .appContainer {
     height: 100vh;
     width: 100vw;
@@ -35,8 +42,11 @@
     align-items: center;
     display: flex;
     justify-content: center;
-    align-items: center;
     width: 100%;
+    background-color: rgba(0,0,0,0.2);
+    height: var(--footer-height);
+    position: absolute;
+    bottom:0;
 }
 
 .title {
